[package]
name = "ddir"
description = "a tool to find files by date/time/datetime"
homepage = "https://github.com/brigand/ddir"
repository = "https://github.com/brigand/ddir"
license = "MIT"
version = "0.0.2"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
nom = "5"
chrono = "0.4"

